AC_INIT([Dynamic Launcher],
    [0.0.0],
    [shved@lvk.cs.msu.su],
    [dlauncher],
    [www.vk.com/ein_shved])

AM_INIT_AUTOMAKE([ -Werror foreign])

AC_PROG_CXX
AX_CXX_COMPILE_STDCXX_11()
AC_PROG_RANLIB
AM_PROG_CC_C_O
AM_PROG_AR
AM_SILENT_RULES([yes])
AC_CONFIG_FILES([
    Makefile
])

AC_OUTPUT
